<resources>
    <string name="app_name">Composition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvTitleText">Состав числа</string>
    <string name="gameRules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="understandText">Понятно</string>
    <string name="chooseLevelText">Выберите уровень:</string>
    <string name="buttonTestLevelText">Тестовый</string>
    <string name="buttonEasyLevelText">Лёгкий</string>
    <string name="buttonNormalLevelText">Средний</string>
    <string name="buttonHardLevelText">Тяжёлый</string>
    <string name="progressAnswers">Правильных ответов %s из %s необходимых</string>
    <string name="questionMark">\?</string>
    <string name="requireRightAnswersText">Необходимое количество правильных ответов: %s</string>
    <string name="scoreResultText">Ваш счёт: %s</string>
    <string name="requireRightAnswersPercentageText">Необходимый процент правильных ответов: %s</string>
    <string name="scoreRightAnswersPercentage">Процент правильных ответов: %s</string>
    <string name="retryButtonText">Попробовать снова</string>
</resources>