<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:text="@string/chooseLevelText" />
    
    <Button
        android:id="@+id/button_level_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonTestLevelText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/button_level_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonEasyLevelText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_green_light"/>

    <Button
        android:id="@+id/button_level_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonNormalLevelText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_orange_light"/>

    <Button
        android:id="@+id/button_level_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonHardLevelText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_red_light"/>

</LinearLayout>